--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"glob": "^10.2.2"
 	},
 	"dependencies": {
-		"concurrently": "^9.0.1"
+		"concurrently": "^9.0.1",
+		"react-content-loader": "^7.0.2"
 	}
 }
